tests/neg/semantic_array_rank_mismatch.baa
// EXPECT: عدد الفهارس للمصفوفة

صحيح الرئيسية() {
    صحيح م[٢][٢].
    صحيح س = م[٠].
    إرجع س.
}
